css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap');
@import url('https://fonts.googleapis.com/css?family=Lato:300:400');

/* letter: #0FF
background: #84B */
/* Variables */
:root {
  --font-family: 'Roboto', 'Lato', sans-serf;
  --normal-font: 400;
  --bold-font: 700;
  --bolder-font: 900;
  --bg-color: #fcfcfc;
  --primary-color: #84b; /* #4756df; */
  --secondary-color: #f08; /* #ff7235; */
  --primary-shadow: #8b8eaf;
  --secondary-shadow: #a17a69;
  --hover-color: white;
  --bottom-margin: 0.5rem;
  --bottom-margin-2: 1rem;
  --line-height: 1.7rem;
  --transition: 0.3s;
}
/* Variables end */

html {
  scroll-behavior: smooth;
}

/* CSS Resets */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

ul {
  list-style-type: none;
}

a {
  text-decoration: none;
  color: var(--primary-color);
}

a:hover {
  color: var(--secondary-color);
}

body {
  font-family: var(--font-family);
}

/* Nav */
nav {
  position: sticky;
  top: 0;
  left: 0;
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1.5rem 3.5rem;
  background-color: var(--bg-color);
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
}

nav h1 {
  color: var(--primary-color);
}

nav a {
  color: var(--primary-color);
  transition: var(--transition);
}
nav a:hover {
  color: var(--secondary-color);
  border-bottom: 2px solid var(--secondary-color);
}

nav ul {
  display: flex;
  gap: 1.9rem;
}

nav ul li {
  font-weight: var(--bold-font);
  padding-top: 9px;
}

.burger-menu {
  color: var(--primary-color);
  font-size: 2rem;
  border: 0;
  background-color: transparent;
  cursor: pointer;
  display: none;
}

/* Hero Section */
.hero {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2.5rem;
  max-width: 68.75rem;
  margin: auto;
}

.hero img {
  height: 25.5rem;
  width: 37.5rem;
}

.bio {
  width: 25rem;
  padding: 0.625rem;
  border-radius: 6px;
  box-shadow: 0px 2px 15px 2px var(--primary-shadow);
  text-shadow: 5px 5px 5px var(--primary-color);
}

.bio h2 {
  margin-bottom: var(--bottom-margin);
}

.bio p {
  line-height: var(--line-height);
  padding: 0.3rem 0;
  text-align: justify;
}

/* More About */
.more-about {
  background-color: var(--bg-color);
  padding: 1rem 6rem;
}

.more-about h2 {
  margin-bottom: var(--bottom-margin);
  text-align: center;
}

.more-about p {
  line-height: var(--line-height);
  padding: 0.4rem;
  text-align: justify;
}

/* Skills */
.skills {
  max-width: 68.75rem;
  margin: auto;
  text-align: center;
  margin-top: 2.5rem;
}

.skill-header {
  margin-bottom: 1rem;
}

.skills-wrapper img {
  padding: 1.25rem;
}

.icon {
  width: 11.875rem;
  height: 11.25rem;
}

.icon-card {
  background-color: #fff;
  border-radius: 11px;
  box-shadow: 0 3px 10px var(--secondary-shadow);
  padding: 20px;
  margin: 10px;
  transition: transform 0.7s;
}

.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: var(--primary-color);
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  opacity: 75%;

  /* Position the tooltip */
  position: absolute;
  z-index: 1;
  bottom: -5px;
  left: 41px;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}

.icon-card:hover {
  transform: scale(1.2);
}

/* Projects */
.projects {
  background-color: var(--bg-color);
  padding: 32px 0;
  margin-top: 2rem;
}

.project-pic {
  width: 65%;
  height: 60%;
}

.projects-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.projects-title {
  text-align: center;
  margin-bottom: 1rem;
}

.project-container {
  text-align: center;
  width: 21.875rem;
  padding: 1rem;
}

.project-container p {
  padding: 0.4rem;
}

.project-title {
  margin-bottom: var(--bottom-margin);
}

.project-details {
  margin-bottom: var(--bottom-margin);
}

.project-card {
  background-color: #fff;
  border-radius: 11px;
  box-shadow: 0 3px 10px var(--primary-shadow);
  padding: 20px;
  margin: 10px;
  transition: transform 0.5s;
}

.project-card:hover {
  transform: scale(1.1);
}

/* Contact */
.contact {
  margin-top: 2rem;
}
.contact h2 {
  text-align: center;
  margin-bottom: var(--bottom-margin-2);
}

.contact-form-container {
  max-width: 40.75rem;
  margin: 0 auto;
  padding: 0.938rem;
  border-radius: 5px;
  box-shadow: 0 3px 10px var(--secondary-shadow);
}

.contact-form-container label {
  line-height: 2.7em;
  font-weight: var(--bold-font);
  color: var(--primary-color);
}

.contact-form-container textarea {
  min-height: 6.25rem;
  font-size: 14px;
}

.contact-form-container .input-field {
  width: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
  border-radius: 5px;
  border: none;
  border: 2px outset var(--primary-color);
  font-size: 0.875rem;
  outline: none;
}

.input-field::placeholder {
  padding: 0.5rem;
  color: var(--primary-color);
}

.submit-btn {
  width: 100%;
  padding: 10px;
  margin: 10px 0;
  background-color: #fff;
  border: 2px solid var(--primary-color);
  border-radius: 5px;
  font-size: 1rem;
  font-weight: var(--bold-font);
  transition: var(--transition);
  color: var(--primary-color);
}

.submit-btn:hover {
  background-color: var(--primary-color);
  border: 2px solid var(--primary-color);
  cursor: pointer;
  color: var(--hover-color);
}

.download-cv {
  width: 100%;
  padding: 7px;
  margin: -8px 0 -9px;
  background-color: #fff;
  border: 2px solid var(--primary-color);
  border-radius: 5px;
  font-size: 1rem;
  font-weight: var(--bold-font);
  transition: var(--transition);
  color: var(--primary-color);
  display: inline;
}

.download-cv:hover {
  background-color: var(--primary-color);
  cursor: pointer;
}

.download-cv a:hover {
  color: var(--hover-color) !important;
  border-bottom: 0px solid var(--secondary-color);
}

/* Socials */
.socials {
  display: flex;
  flex-direction: column;
  position: fixed;
  right: 1%;
  bottom: 50%;
}

.socicon {
  width: 2rem;
  height: 2rem;
}

.icon-dev {
  margin: -3px;
}

/* Scroll up */
.scroll-up {
  position: fixed;
  right: 0.5%;
  bottom: 3%;
  cursor: pointer;
}

.up-arrow {
  width: 2.5rem;
  height: 2.5rem;
}

.displayOn {
  display: inline;
}

.displayOff {
  display: none;
}

/* Footer */
footer {
  background-color: var(--primary-color);
  padding: 1.25rem;
  text-align: center;
  margin: 2rem 0 0;
  color: black;
}
.copy a {
  color: whitesmoke;
}

/* responsive 720px */
@media screen and (max-width: 720px) {
  /*changes reflects on screen with a width of 720px and below*/
  nav {
    padding: 1.5rem 1rem;
  }

  /* Build Hamburguer Menu */
  nav ul {
    position: fixed;
    background-color: var(--bg-color);
    flex-direction: column;
    /* top: 86px;
    left: 10%;
    width: 80%; */
    top: 90px;
    left: 55%;
    width: 39%;
    text-align: center;
    transform: translateX(120%);
    transition: transform 0.5s ease-in;
  }

  nav ul li {
    margin: 0px;
    padding-top: 2px;
  }

  .download-cv {
    margin: -8px 0 -8px;
  }
  .burger-menu {
    display: block;
  }

  nav ul.show {
    transform: translateX(0);
  }

  /* hero section */
  .hero {
    margin-top: -4rem;
    flex-direction: column;
    gap: 0;
  }

  .hero img {
    margin-top: 4rem;
    height: 26.5rem;
    width: 37.5rem;
  }

  .bio {
    margin-top: 2rem;
    width: 20.5rem;
  }

  /* more about */
  .more-about {
    margin-top: 2rem;
    padding: 1rem 3.5rem;
  }

  .more-about h2 {
    text-align: center;
  }

  .more-about p {
    text-align: justify;
  }

  /* skills */
  .icon {
    width: 5.875rem;
    height: 5.25rem;
  }

  /* projects section */
  .projects-container {
    flex-direction: column;
  }

  .project-container {
    width: 20.875rem;
  }

  /* contact */
  .contact-form-container {
    max-width: 23.75rem;
  }
}

/* responsive 420px */
@media screen and (max-width: 420px) {
  /*changes reflects on screen with a width of 420px and below*/
  /* .hero img {
    height: 18.5rem;
    width: 22rem;
  } */
  .hero img {
    height: 14.5rem;
    width: 20rem;
  }

  .bio {
    width: 18.3rem;
    margin-top: 2rem;
  }

  .project-container {
    width: 17.875rem;
  }

  .contact-form-container {
    max-width: 17.75rem;
  }
}

/* responsive 1047px */
@media (mind-width: 768px) and (max-width: 1047px) {
  /*changes reflects on screen with a width of 420px and below*/
  .hero img {
    height: 25.5rem;
    width: 37.5rem;
  }
  .bio {
    width: 18.3rem;
    margin-top: 2rem;
  }
}

